[package]
name = "triton-one-rpc-debug-scripts"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
serde = "1"
serde_json = "1"
solana-account-decoder = "1.10.30"
solana-client = "1.10.30"
solana-sdk = "1.10.30"
tokio = { version = "1.14", features = ["rt-multi-thread", "time", "macros"] }

[profile.release]
lto = true
codegen-units = 1
