[package]
name = "triton-one-rpc-debug-scripts"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
serde = "1"
serde_json = "1"
solana-account-decoder = "1.11.5"
solana-cli-output = "1.11.5"
solana-client = "1.11.5"
solana-sdk = "1.11.5"
tokio = { version = "1.14", features = ["rt-multi-thread", "time", "macros"] }

[patch.crates-io]
solana-account-decoder = { version = "1.11.5", git = "https://github.com/fanatid/solana.git", tag = "v1.11.5-client-show-errors" }
solana-cli-output = { version = "1.11.5", git = "https://github.com/fanatid/solana.git", tag = "v1.11.5-client-show-errors" }
solana-client = { version = "1.11.5", git = "https://github.com/fanatid/solana.git", tag = "v1.11.5-client-show-errors" }
solana-sdk = { version = "1.11.5", git = "https://github.com/fanatid/solana.git", tag = "v1.11.5-client-show-errors" }

[profile.release]
lto = true
codegen-units = 1
